<resources>
    <string name="app_name">InformationsPersonnes</string>
    <string name="lstName">Last Name:</string>
    <string name="lastName">Last name:</string>
    <string name="visitor">Visitor</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="name">Name:</string>
    <string name="fullName">Full name:</string>
    <string name="phone">Phone number:</string>/
    <string name="email">email:</string>
    <string name="btnGo">Go</string>
    <string name="retour">Retour</string>
</resources>